# pmm

./: .gitignore  Cargo.toml  FULL_SPEC.md  IMPLEMENTATION.md  MODULAR_SPEC.md  README.md  SPEC.md
src/: binance_klines.rs  dashboard.rs  discovery.rs  features.rs  lib.rs  observability.rs  slug.rs
tests/: binance_klines_loader.rs  dashboard_http.rs  discovery_live_gamma.rs  features_transform.rs  logging_smoke.rs
tests/fixtures/binance/: BTCUSDT_1s_sample.csv  ETHUSDT_1s_sample.csv  SOLUSDT_1s_sample.csv  XRPUSDT_1s_sample.csv
