[package]
name = "pmm"
version = "0.1.0"
edition = "2021"

[features]
default = []
discovery-sdk = ["dep:polymarket-client-sdk"]
live-gamma-tests = ["discovery-sdk"]

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
polymarket-client-sdk = { version = "0.4.1", optional = true, default-features = false, features = ["gamma"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net"] }

[dev-dependencies]
regex = "1"
tower = { version = "0.5", features = ["util"] }
