[package]
name = "pmm"
version = "0.1.0"
edition = "2021"

[features]
default = ["discovery-sdk"]
discovery-sdk = ["dep:polymarket-client-sdk"]
live-gamma-tests = ["discovery-sdk"]
live-binance-tests = []

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.10"
csv = "1"
hex = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
polymarket-client-sdk = { version = "0.4.1", optional = true, default-features = false, features = ["gamma"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net", "io-util", "process"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
regex = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
